# FYP

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md
notes/Partial_Vectorisation/assets/: FlexVec_1733067783490_0.edn
notes/Partial_Vectorisation/journals/: 2024_11_20.md
notes/Partial_Vectorisation/logseq/: config.edn
notes/Partial_Vectorisation/pages/: FlexVec Code Examples.md  FlexVec Notes.md  Home.md  LLVM Files.md  LoopVectorize.md  Useful Links.md  hls__FlexVec_1733067783490_0.md  llvm___Transforms___Vectorize___LoopVectorizationLegality.h.md
source/: build.sh  build_clang_script.sh  build_llvm_script.sh  full_build.sh  run_tests.sh
source/scripts/: process_optimization_report.py
source/scripts/script_venv/: pyvenv.cfg
source/tests/early-loop-termination/FlexVecExample/: FlexVecExample.ll
src/: FlexVecExample.ll  FlexVecExample.opt.yaml  FlexVecExample.s  flex.opt.yaml
src/scripts/: build.sh  build_clang_script.sh  build_llvm_script.sh  compile_and_generate_cfg.sh  dom.benchmark.dot  run_benchmarks.sh  run_tests.sh  split_output.sh
src/scripts/generate_sankey_diagram/: Cargo.toml
src/scripts/generate_sankey_diagram/src/: main.rs
src/scripts/optimization_report_parser/: Cargo.toml  result.json
src/scripts/optimization_report_parser/src/: main.rs
src/tests/early-loop-termination/FlexVecExample/: FlexVecExample.c  FlexVecExample.ll.callgraph.dot
src/tests/report_examples/: 0  llvm_architecture_example.c  llvm_architecture_example.s
(+1 files in other folders)
